--- a/notritionVendorsAPP/en.lproj/Localizable.strings
+++ b/notritionVendorsAPP/en.lproj/Localizable.strings
@@ -51,7 +51,7 @@
 "enter content" = "enter content";
 "enter title" = "enter title";
 "Back" = "Back";
-"Distance: "
+"Distance: " = "Distance: ";
 " (From current location)" = " (From current location)";
 "Opening" = "Opening";
 "Closed" = "Closed";
