--- a/notritionVendorsAPP/View/vi.lproj/LaunchScreen.strings
+++ b/notritionVendorsAPP/View/vi.lproj/LaunchScreen.strings
@@ -1,3 +1,3 @@
 
 /* Class = "UILabel"; text = "Make Your Life Easier"; ObjectID = "MEE-G2-A6c"; */
-"MEE-G2-A6c.text" = "Make Your Life Easier";
+"MEE-G2-A6c.text" = "Mọi thứ dễ dàng hơn";
